--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -1,13 +1,12 @@
 $size: (
-  h1: Clamp(2rem, 10vw + 1rem, 5rem),
-  h2: Clamp(1.75rem, 10vw + 1rem, 3rem),
-  h3: Clamp(1.5rem, 10vw + 1rem, 2.5rem),
-  h4: Clamp(1.5rem, 10vw + 1rem, 2.5rem),
-  h5: Clamp(1.5rem, 10vw + 1rem, 2.5rem),
-  h6: Clamp(1.25rem, 10vw + 1rem, 2.5rem),
-  p: Clamp(0.75rem, 1vw + 1rem, 1rem),
-  a: Clamp(0.75rem, 10vw + 1rem, 1.25rem),
-  button: Clamp(0.75rem, 10vw + 1rem, 1rem),
+  h1: Clamp(1rem, 6.5vw + 1rem, 5rem),
+  h2: Clamp(3rem, 10vw + 1rem, 3rem),
+  h3: Clamp(3rem, 10vw + 1rem, 3rem),
+  p: Clamp(1.5rem, 1vw + 1rem, 1.5rem),
+  a: Clamp(1rem, 10vw + 1rem, 1.25rem),
+  button: Clamp(1.25rem, 10vw + 1rem, 1.25rem),
+  strong: Clamp(2.25rem, 10vw + 1rem, 2.25rem),
+  small: Clamp(1.5rem, 10vw + 1rem, 1.5rem),
   // small: (
   //   h1: 2.5rem,
   //   h2: 2rem,
@@ -23,18 +22,14 @@ $size: (
   //   h4: 2rem,
   //   p: 1.5rem,
   //   a: 1rem,
-  // ),,,,,,,,,,,,,
+  // ),,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 
 $weight: (
   primary: (
-    500: 500,
-    600: 600,
-    700: 700,
+    300: 300,
   ),
   accent: (
-    500: 500,
-    600: 600,
-    700: 700,
+    400: 400,
   ),
 );
