--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,6 +1,5 @@
 %btn {
-  padding: 0.75em 1.25em;
-  border-radius: 0.5rem;
+  padding: 0.5em 2.75em;
   border: 0;
   outline: 0;
   cursor: pointer;
@@ -10,18 +9,17 @@
   @extend %btn;
   background-color: red;
   color: white;
-
-  &:hover {
-    background-color: white;
-    color: red;
-    outline: 2px solid red;
-  }
 }
 
 @mixin btn-outline {
   @extend %btn;
 
-  background-color: white;
-  color: black;
-  outline: 2px solid black;
+  background-color: var(--clr-primary-400);
+  color: var(--clr-primary-700);
+  outline: 2px solid var(--clr-primary-700);
+
+  &:hover {
+    background-color: var(--clr-primary-700);
+    color: var(--clr-primary-400);
+  }
 }
