--- a/src/sass/base/_colors.scss
+++ b/src/sass/base/_colors.scss
@@ -1,6 +1,7 @@
 $colors: (
   primary: (
     700: hsl(0, 0%, 0%),
+    650: hsl(0, 0%, 0%, 0.5),
     600: hsl(0, 0%, 41%),
     500: hsl(0, 0%, 55%),
     400: hsl(0, 0%, 100%),
