--- a/src/sass/base/_tokens.scss
+++ b/src/sass/base/_tokens.scss
@@ -28,7 +28,7 @@
   --padding-xs: 0.25em;
   --padding-sm: calc(0.5rem + 2vw);
   --padding-md: calc(1em + 1vw);
-  --padding-lg: calc(2rem + 2vw);
+  --padding-lg: calc(2rem + 2vmin);
   --padding-xl: calc(4em + 2vw);
   --padding-2xl: 8em;
 
