--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -17,7 +17,7 @@
   background-color: var(--clr-primary-400);
   color: var(--clr-primary-700);
   outline: 2px solid var(--clr-primary-700);
-
+  transition: background-color 250ms ease-out, color 500ms ease-in;
   &:hover {
     background-color: var(--clr-primary-700);
     color: var(--clr-primary-400);
