--- a/src/sass/layouts/_navigation.scss
+++ b/src/sass/layouts/_navigation.scss
@@ -38,7 +38,7 @@
   }
 
   &__open {
-    content: url("../images/icon-close.svg");
+    content: url("../images/svg/icon-close.svg");
   }
 
   @include breakpoint(large) {
