--- a/src/sass/sections/_footer.scss
+++ b/src/sass/sections/_footer.scss
@@ -35,27 +35,6 @@
       display: flex;
       justify-content: center;
       gap: 1.5em;
-      // li {
-      //   position: relative;
-      //   background-color: var(--clr-primary-400);
-      //   mask-size: contain;
-      //   mask-repeat: no-repeat;
-      //   width: 30px;
-      //   height: 30px;
-
-      //   &:nth-child(1) {
-      //     mask-image: url("../images/icon-facebook.svg");
-      //   }
-      //   &:nth-child(2) {
-      //     mask-image: url("../images/icon-twitter.svg");
-      //   }
-      //   &:nth-child(3) {
-      //     mask-image: url("../images/icon-pinterest.svg");
-      //   }
-      //   &:nth-child(4) {
-      //     mask-image: url("../images/icon-instagram.svg");
-      //   }
-      // }
 
       li {
         position: relative;
@@ -80,7 +59,9 @@
       color: var(--clr-primary-500);
       text-align: center;
     }
-    align-items: flex-end;
+    @include breakpoint(large) {
+      align-items: flex-end;
+    }
     div {
       text-align: center;
       @include breakpoint(large) {
